# vid2txt

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
scripts/: build-dmg.sh  build-release-archive.sh  install-cli.sh  install-from-bundle.sh  path-setup.sh
src/: ascii.rs  cli.rs  main.rs  terminal.rs  video.rs
